2018-09-18

        * Version 1.6.0 released
        ========================

        Fix OpenMP bug in GObservations::likelihood::eval (#2678)
        Define GCTACubeBackground for energy boundaries instead of nodes (#2677) 
        Remove setting of effective area energy boundaries from "LO_THRES" and
          "HI_THRES" keywords (#2674)
        Correctly compute maximum energy in GCTAAeff2D class (#2674)
        Support "ENERG" column name for CTA energy dispersion FITS file (#2670)
        Make IRF interface compatible with H.E.S.S. format (#2660)
        Add use_irf_bkg argument to GCTAOnOffObservation constructor (#2659)
        Support effective area with theta cut in GCTAOnOffObservation (#2657)
        Add gammalib::replace_segment() function
        Apply CTA 2D energy dispersion kludge only to CTA data (#2654)
        Add ARC WCS projection (#2541)
        Add GLog::buffer() method.
        Renamed GPhoton::mcid() to GPhoton::mc_id()
        Remove at() methods from Python interface (#2515)
        Support application specific system parameter files (#2513)
        Add methods and operators to handle additional columns in GPha 
        Made GApplicationPar::query() method public
        Fix handling of q-mode parameters (#2495)
        Speed up computation of diffuse map models for CTA (#2466)
        Enhance GModelSpatialRadialProfileGauss class (#2463)
        Increase integration precision for CTA diffuse model response (#2458)
        Add GModelSpectralExponential class (#2454)
        Add GCTAModelRadialAcceptance model component setter methods
        Handle observation-specific energy thresholds in CTA On/Off analysis (#2429)
        Add GCTAEdisp::prob_erecobin() method (#2422)
        Add gammalib::gauss_integral() function (#2422)
        Keep existing library path in installation script on Mac OS X (#2420)
        Make GPha, GArf and GRmf output files XSPEC compliant (#2404)
        Add methods to store file attributes in GPha (#2404)